--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ authors = ["Daniele Mazzotta"]
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.49.0", features = ["full"] }
+uuid = { version = "1.20.0", features = ["v4"] }
+chrono = "0.4.43"
+lazy_static = "1.5.0"
 
 
 [dev-dependencies]
